--- a/packages/SystemUI/res/layout/status_bar_expanded_header.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded_header.xml
@@ -44,16 +44,16 @@
         android:gravity="center_vertical"
         android:baselineAligned="false"
         >
-        <RelativeLayout
-            android:id="@+id/datetime"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:background="@drawable/ic_notify_button_bg"
-            android:enabled="false"
-            >
-            <com.android.systemui.statusbar.policy.Clock
+    <RelativeLayout
+        android:id="@+id/datetime"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:background="@drawable/ic_notify_button_bg"
+        android:enabled="false"
+        >
+        <com.android.systemui.statusbar.policy.ClockStock
                 android:id="@+id/clock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
                 android:layout_centerVertical="true"
                 />
 
-            <com.android.systemui.statusbar.policy.DateView
+         <com.android.systemui.statusbar.policy.DateView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -71,7 +71,6 @@
                 android:layout_toEndOf="@id/clock"
                 android:layout_centerVertical="true"
                 />
-
         </RelativeLayout>
 
         <Space
