--- a/core/res/res/values/pa_strings.xml
+++ b/core/res/res/values/pa_strings.xml
@@ -42,6 +42,9 @@
     <!-- Label for item that screenshots in device options dialog -->
     <string name="global_action_screenshot">Screenshot</string>
 
+    <!-- label for screen record item in phone options dialog -->
+    <string name="global_action_screen_record">Screen record</string>
+
     <string name="permlab_interceptSmsSent">intercept outgoing SMS</string>
     <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
     <string name="permdesc_interceptSmsSent">Allows the app to
