--- a/packages/SystemUI/res/values-ca/pa_strings.xml
+++ b/packages/SystemUI/res/values-ca/pa_strings.xml
@@ -17,7 +17,8 @@
  */
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!--Screenshot delete -->
+    <string name="quick_settings_battery_charging">Carregant</string>
+    <string name="quick_settings_battery_discharging">Descarregant</string>
     <string name="screenshot_delete_action">Esborrar</string>
     <string name="quick_settings_immersive_mode_label">Immersió</string>
     <string name="quick_settings_immersive_mode_off_label">Immersió desactivada</string>
