--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -30,6 +30,11 @@
     <string name="quick_settings_immersive_mode_label">Immersive</string>
     <!-- QuickSettings: Immersive mode (Off) [CHAR LIMIT=NONE] -->
     <string name="quick_settings_immersive_mode_off_label">Immersive Off</string>
+    <!-- NFC Quicksettings tile -->
+    <string name="quick_settings_nfc_label">NFC on</string>
+    <string name="quick_settings_nfc_off_label">NFC off</string>
+    <!-- QuickSettings: Sleep Tile  -->
+    <string name="quick_settings_sleep_label">Sleep</string>
 
     <!-- Content description of the halo button in the notification panel for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
     <string name="accessibility_halo">Create notification halo.</string>
@@ -54,8 +59,4 @@
     <string name="halo_signal_bars_2">TWO BARS</string>
     <string name="halo_signal_bars_1">ONE BAR</string>
     <string name="halo_signal_bars_none">NO BARS</string>
-
-    <!-- NFC Quicksettings tile -->
-    <string name="quick_settings_nfc_label">NFC on</string>
-    <string name="quick_settings_nfc_off_label">NFC off</string>
 </resources>
