--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -46,6 +46,9 @@
     <string name="quick_settings_nfc_off_label">NFC off</string>
     <!-- QuickSettings: Sleep Tile  -->
     <string name="quick_settings_sleep_label">Sleep</string>
+    <!-- USB Tether Tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_usb_tether_connected_label">Tethering off</string>
+    <string name="quick_settings_usb_tether_on_label">Tethering on</string>
 
     <!-- Content description of the halo button in the notification panel for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
     <string name="accessibility_halo">Create notification halo.</string>
