--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -51,6 +51,8 @@
     <string name="quick_settings_usb_tether_on_label">Tethering on</string>
     <string name="quick_settings_quiethours_label">Quiet hours</string>
     <string name="quick_settings_quiethours_off_label">Quiet hours off</string>
+    <!-- QuickSettings: Volume Tile  -->
+    <string name="quick_settings_volume_label">Volume</string>
 
     <string name="status_bar_notification_hide_icon_packages">Hide app\'s notification icon(s)</string>
 
