--- a/core/res/res/values/pa_strings.xml
+++ b/core/res/res/values/pa_strings.xml
@@ -54,4 +54,9 @@
     <string name="permlab_recordScreen">Record content being displayed</string>
     <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
     <string name="permdesc_recordScreen">Allows the app to record the users screen.</string>
+
+    <!-- Setting confirmation dialog strings. Shown when any UI interaction can be modified by user input -->
+    <string name="setting_confirmation_ask_me_later">Ask later</string>
+    <string name="setting_confirmation_yes">Yes</string>
+    <string name="setting_confirmation_no">No</string>
 </resources>
