--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -39,6 +39,8 @@
     <string name="quick_settings_immersive_mode_full_label">Immersive</string>
     <!-- QuickSettings: Immersive mode (Off) [CHAR LIMIT=NONE] -->
     <string name="quick_settings_immersive_mode_off_label">Immersive Off</string>
+    <!-- QuickSettings: Immersive mode (On) [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_immersive_mode_on_label">Immersive On</string>
     <!-- QuickSettings: Immersive extra modes [CHAR LIMIT=NONE] -->
     <string name="quick_settings_immersive_mode_no_status_bar_label">Navigation bar</string>
     <string name="quick_settings_immersive_mode_no_navigation_bar_label">Status bar</string>
