Update Slim Recent App Sidebar (1/2)
- Add setting to disable sidebar without removing items
- Queue apps to launch on recents close by swiping icons left/right
- Add setting to not open simultaneously with recents in order to reduce recents lag when opening

Change-Id: I3ec2c740d0dc35eb58089c6ea000f35dc843c542

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -224,4 +224,8 @@
     <!-- Heads up snooze toast -->
     <string name="heads_up_snooze_message">Heads up is snoozing for <xliff:g id="number">%d</xliff:g> minutes.</string>
 
+    <!-- Slim recents app sidebar queue app toast -->
+    <string name="toast_recents_queue_app">Launch %s after closing recents</string>
+    <string name="toast_recents_cancel_queued_app">Cancelled app launch</string>
+
 </resources>
