--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -25,4 +25,7 @@
     <!-- Default value for led color when battery is really fully charged -->
     <integer name="config_notificationsBatteryReallyFullARGB">0xFF0000FF</integer>
 
+    <!-- Halo -->
+    <dimen name="halo_content_max_width">350dp</dimen>
+
 </resources>
